--- a/desktop.ini
+++ b/desktop.ini
@@ -1,3 +1,4 @@
 [LocalizedFileNames]
 Screenshot 2024-10-05 234404.png=@Screenshot 2024-10-05 234404,0
 Screenshot (11).png=@Screenshot (11),0
+Screenshot (12).png=@Screenshot (12),0
